--- a/Vitawebcare/index.html
+++ b/Vitawebcare/index.html
@@ -14,59 +14,59 @@
             <h1 class="main-heading">Welkom bij Vitacare Stad</h1>
 
             <img class="town-preview" src="images/townheader.svg" alt="Een illustratie van de toren van Vitawebcare stad"/>
-            
+
         </header>
 
         
         <main>
 
-            <section>
-                <img src="images/townsleep.svg" alt="afbeelding van een Vitaweb hotel"/>
-                <div>
-                    <!--een headeer en een shop list wordt later hier toegevoegd-->
-                    <h2>Sleep</h2>
-                    <ul>
-                        <li>
-                            <a href="#">The Snooze Inn   </a>
+            <section class="store-section">
+                <img class="building" src="images/townsleep.svg" alt="afbeelding van een Vitaweb hotel"/>
+                <div class="store-details">
+                    <h2 class="category-heading">Sleep</h2>
+                    <ul class="store-list">
+                        <li class="store-name">
+                            <a href="#" class="store-link">The Snooze Inn   </a>
                         </li>
-                        <li>
-                            <a href="#">Zzz hotel        </a>
-                        </li>
-                    </ul>
-                </div>
-            </section>
-
-            <section>
-                <img src="images/townfood.svg" alt="illustratie van een Vitaweb restaurant">
-                <div>
-                    <h2>Food</h2>
-                    <ul>
-                        <li>
-                            <a href="#">Just Cookies</a>
-                        </li>
-                        <li>
-                            <a href="#">Cake Too</a>
+                        <li class="store-name">
+                            <a href="#" class="store-link">Zzz hotel        </a>
                         </li>
                     </ul>
                 </div>
             </section>
 
-            <section>
-                <img src="images/townshop.svg" alt="illustratie van een Vita Stad winkel">
-                <div>
-                    <h2>shop</h2>
-                    <ul>
-                        <li>
-                            <a href="#">Puppy Parade</a>
+            <section class="store-section">
+                <img class="building" src="images/townfood.svg" alt="illustratie van een Vitaweb restaurant">
+                <div class="store-details">
+                    <h2 class="category-heading">Food</h2>
+                    <ul class="store-list">
+                        <li class="store-name">
+                            <a href="#" class="store-link">Just Cookies</a>
                         </li>
-                        <li>
-                            <a href="#">Cool Kittens</a>
+                        <li class="store-name">
+                            <a href="#" class="store-link">Cake Too</a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+            <section class="store-section">
+                <img class="building" src="images/townshop.svg" alt="illustratie van een Vita Stad winkel">
+                <div class="store-details">
+                    <h2 class="category-heading">shop</h2>
+                    <ul class="store-list">
+                        <li class="store-name">
+                            <a href="#" class="store-link">Puppy Parade</a>
+                        </li>
+                        <li class="store-name">
+                            <a href="#" class="store-link">Cool Kittens</a>
                         </li>
                     </ul>
                 </div>
             </section>
         </main>
-        <footer>
+
+        <footer class="primary-footer">
             <p>Met enthousiasme gemaakt door zorgzame bewoner</p>
         </footer>
     </body>
