--- a/Vitawebcare/index.html
+++ b/Vitawebcare/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header class="primary-header">
-            <h1 class="main-heading">Welkom bij Vitacare Stad</h1>
+            <h1 class="main-heading">Welkom bij VitaCare Stad</h1>
 
             <img class="town-preview" src="images/townheader.svg" alt="Een illustratie van de toren van Vitawebcare stad"/>
 
